k8s/farmdb/farmdb_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmdb-django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: farmdb-django-deployment
  template:
    metadata:
      labels:
        app: farmdb-django-deployment
    spec:
      containers:
      - name: farmdb-django
        image: climatefarmers/farmdb-django:sha-6bc2559
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 10
        command: ['sh']
        args: ['entrypoint.sh']
        imagePullPolicy: Always
        volumeMounts:
        - name: static-secret
          mountPath: "/etc/static"
      
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP

      - name: address-parser
        image: climatefarmers/address-parser
        imagePullPolicy: Always
      
      volumes:
      - name: static-secret
        secret:
          secretName: static-gsa-credentials
